Fix common prefix error